Dynamic Paint doesn't update mesh before 'start frame' #49004

Closed
opened 2016-08-02 18:00:46 +02:00 by Cameron Tindall · 6 comments

Operating System
Windows 7, gtx 970. Though it happens on all of the machines I have, each have slightly different hardware.
I doubt it's hardware specific, but if it ends up relevant I'll get the system-infos on the machines that reproduce it.

Blender Version
Broken: 2.77a
I haven't known dynamic paint to previously behave differently, it's not a recent change.

Short description of error
When using a vertex-based dynamic paint canvas, the mesh / paint data doesn't update before the start frame. so if an animation has a dynamic paint that doesn't start until mid-way through a scene (to save on baking time, for instance), the painting can be out of sync on any frames before the start frame, the canvas doesn't display the initial state of the paint, it displays the last state that was visible.

This is in contrast to what happens after the end frame, where the canvas will update properly, and any frame past 'end' it will display the state of the paint at the end frame.

It can be 'fixed' by updating the object in some way, the simplest is to select the canvas, press g to move and then cancel with right click, that resets the canvas state to initial. Going into edit mode and then coming back out also works, as well as scrubbing to the start frame of the canvas, then jumping or scrubbing anywhere from there (since now the last visible state is the canvas's initial state).

Exact steps for others to reproduce the error
File : DynPaintUpdateBugTest.blend

The attached file is just a blank file (loaded factory settings) with a subdivided plane using a default dynamic paint canvas, except the start frame is 50 and the end frame is 200. The file then has an icosphere using a default dynamic paint brush, which is animated to move around the canvas a bit, and that's it.

With the attached file (or a similar setup), just press play. Once the animation loops back over to frame 1, it should clearly show the state of the dynamic paint canvas as it was at the end of the animation, during frames 1-49

You can also scrub to somewhere in the middle of the dynamic paint animation, and skip to any frame before frame 50, it shows the last state of the canvas, not an empty canvas.

It's worth noting that this still happens even if the dynamic paint canvas is baked.

This behaviour is mostly a problem when rendering animations out, you have to make sure to be at the scene start, and then use the mode-cancel trick to reset any canvases before pressing the render animation button, or the problem persists into the render.

edit: woops, first bug report, accidentally removed file while writing initial. added back now.

**Operating System** Windows 7, gtx 970. Though it happens on all of the machines I have, each have slightly different hardware. I doubt it's hardware specific, but if it ends up relevant I'll get the system-infos on the machines that reproduce it. **Blender Version** Broken: 2.77a I haven't known dynamic paint to previously behave differently, it's not a recent change. **Short description of error** When using a vertex-based dynamic paint canvas, the mesh / paint data doesn't update before the start frame. so if an animation has a dynamic paint that doesn't start until mid-way through a scene (to save on baking time, for instance), the painting can be out of sync on any frames before the start frame, the canvas doesn't display the initial state of the paint, it displays the last state that was visible. This is in contrast to what happens after the end frame, where the canvas will update properly, and any frame past 'end' it will display the state of the paint at the end frame. It can be 'fixed' by updating the object in some way, the simplest is to select the canvas, press g to move and then cancel with right click, that resets the canvas state to initial. Going into edit mode and then coming back out also works, as well as scrubbing to the start frame of the canvas, then jumping or scrubbing anywhere from there (since now the last visible state is the canvas's initial state). **Exact steps for others to reproduce the error** File : [DynPaintUpdateBugTest.blend](https://archive.blender.org/developer/F331464/DynPaintUpdateBugTest.blend) The attached file is just a blank file (loaded factory settings) with a subdivided plane using a default dynamic paint canvas, except the start frame is 50 and the end frame is 200. The file then has an icosphere using a default dynamic paint brush, which is animated to move around the canvas a bit, and that's it. With the attached file (or a similar setup), just press play. Once the animation loops back over to frame 1, it should clearly show the state of the dynamic paint canvas as it was at the end of the animation, during frames 1-49 You can also scrub to somewhere in the middle of the dynamic paint animation, and skip to any frame before frame 50, it shows the last state of the canvas, not an empty canvas. It's worth noting that this still happens even if the dynamic paint canvas is baked. This behaviour is mostly a problem when rendering animations out, you have to make sure to be at the scene start, and then use the mode-cancel trick to reset any canvases before pressing the render animation button, or the problem persists into the render. edit: woops, first bug report, accidentally removed file while writing initial. added back now.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @Antaioz

Added subscriber: @Antaioz

Added subscribers: @miikah, @mont29

Added subscribers: @miikah, @mont29
Miika Hamalainen was assigned by Bastien Montagne 2016-08-05 16:53:28 +02:00

Hrmmmffff… this is half-point cache, half-dynapaint issue…

@miikah P381 fixes the problem, roughly by using more 'virtual local current frame' isntead of scene.cfra, not sure it’s totally OK though?

Don’t quite understand why mem cache is reset on every run too, this kind of defeats the purpose of caching… :/

Hrmmmffff… this is half-point cache, half-dynapaint issue… @miikah [P381](https://archive.blender.org/developer/P381.txt) fixes the problem, roughly by using more 'virtual local current frame' isntead of scene.cfra, not sure it’s totally OK though? Don’t quite understand why mem cache is reset on every run too, this kind of defeats the purpose of caching… :/

This issue was referenced by 1fe9d671cf

This issue was referenced by 1fe9d671cf19f339917a78cb3ab0b6148ab1ceff

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49004
No description provided.